Deploy/objects/Treinamento_Modulo__c.object
<CustomObject>
    <description>Treinamentos e Modulos</description>
    <gender/>
    <label>Treinamento Modulo</label>
    <nameField>
        <displayFormat>trm-{00000}</displayFormat>
        <label>Treinamento Modulo Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Treinamento Modulos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Ativo__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Define o status da junção</description>
        <inlineHelpText>Informe o status desta junção</inlineHelpText>
        <label>Ativo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ModuloId__c</fullName>
        <description>Modulo</description>
        <inlineHelpText>Defina o módulo a ser vinculado</inlineHelpText>
        <label>Modulo</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Modulo__c.Ativo__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Modulo__c</referenceTo>
        <relationshipLabel>Treinamento Modulos</relationshipLabel>
        <relationshipName>Treinamento_Modulos</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TreinamentoId__c</fullName>
        <description>Treinamento</description>
        <inlineHelpText>Defina o treinamento a ser vinculado</inlineHelpText>
        <label>Treinamento</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Treinamento__c.Ativo__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Treinamento__c</referenceTo>
        <relationshipLabel>Treinamento Modulos</relationshipLabel>
        <relationshipName>Treinamento_Modulos</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>